# nbt

./: CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
cmake/: CompilerWarnings.cmake
src-example/: CMakeLists.txt  main.cpp
src/nbt/: NbtContext.hpp  Tag.cpp  Tag.hpp
src/nbt/io/: NbtFormat.hpp  NbtIo.hpp  NbtReader.hpp  NbtWriter.hpp
src/nbt/tags/: ArrayTagBase.hpp  ByteArrayTag.hpp  ByteTag.hpp  CompoundTag.hpp  DoubleTag.hpp  FloatTag.hpp  Int64Tag.hpp  IntArrayTag.hpp  IntTag.hpp  ListTag.hpp  LongArrayTag.hpp  ShortTag.hpp  StringTag.hpp
